# coffee-shop-api

./: .env.example  .gitignore  Dockerfile.dev  README.md  alembic.ini  docker-compose.yml  env.example  pyproject.toml  requirements-dev.txt  requirements.txt  start.bat  start.sh  test_basic.py
.github/workflows/: ci-cd.yml
alembic/: README.md  env.py
alembic/versions/: README.md
app/: main.py
app/api/v1/: __init__.py  auth.py  health.py  user.py
app/core/: auth.py  celery.py  celery_utils.py  config.py  email.py  logging_config.py  security.py
app/db/: database.py  deps.py
app/models/: __init__.py  refresh_token.py  user.py  verification_token.py
app/schemas/: auth.py  health.py  task.py  token.py  user.py
app/services/: auth.py
app/tasks/: cleanup.py
tests/: conftest.py  test_app_basic.py  test_app_startup.py  test_auth.py  test_auth_simple.py  test_basic_config.py  test_config.py  test_tasks.py
